# VulkanLearning

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
android/: build.gradle  local.properties  settings.gradle
android/apps/core/: CMakeLIsts.txt
android/apps/triangle/: CMakeLists.txt  build.gradle
android/apps/triangle/src/main/: AndroidManifest.xml
core/: CMakeLists.txt  baseRenderer.cpp  baseRenderer.h  camera.cpp  device.cpp  device.h  errorLog.cpp  errorLog.h  light.cpp  light.h  model.cpp  model.h  shader.cpp  shader.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h  utils.hpp  validation.cpp  validation.h  window.cpp  window.h
data/shaders/: build.bat
projects/: CMakeLists.txt
projects/DeferredRenderingSubpasses/: CMakeLists.txt  README.md
projects/DeferredRenderingSubpasses/shaders/: phong.vert  phong_vert.spv  second.vert  second_frag.spv
projects/DeferredRenderingSubpasses/src/: Camera.cpp  Light.h  Source.cpp  VulkanRenderer.cpp  VulkanRenderer.h
projects/DeferredSubpasses/: CMakeLists.txt
projects/DeferredSubpasses/shaders/: build.bat  phong.frag  phong_frag.spv  second.frag  second_vert.spv
projects/DeferredSubpasses/src/: deferredRenderer.cpp  deferredRenderer.h  main.cpp
projects/GouraudPhongShading/: CMakeLists.txt  README.md
projects/GouraudPhongShading/shaders/: gouraud_vert.spv  phong.vert
projects/GouraudPhongShading/src/: Camera.h  Light.cpp  Shader.cpp  Texture.cpp  VulkanRenderer.cpp
projects/PhongGouraud/: CMakeLists.txt
projects/PhongGouraud/shaders/: build.bat  gouraud_frag.spv  phong_vert.spv
projects/PhongGouraud/src/: main.cpp  phongGouraudRenderer.cpp  phongGouraudRenderer.h
projects/triangle/: CMakeLists.txt
projects/triangle/shaders/: build.bat
projects/triangle/src/: main.cpp  triangleRenderer.cpp  triangleRenderer.h
shaders/: build.bat  gouraud.frag  gouraud.vert  phong_frag.spv  shader.frag  shader.vert  triangle.frag  triangle.vert  triangle_vert.spv  vert.spv
src/: Device.cpp  Device.h  Model.cpp  Model.h  Shader.h  Texture.cpp  Texture.h  Utils.hpp  VulkanRenderer.cpp  VulkanRenderer.h  main.cpp
